--- a/ProjectOne/index.html
+++ b/ProjectOne/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1 id = "root">This is going to change</h1>
+    <h1 id = "root"></h1>
     <script src="index.js"></script>
 </body>
 </html>
