--- a/ProjectTwo/index.html
+++ b/ProjectTwo/index.html
@@ -7,8 +7,9 @@
     <title>React</title>
   </head>
   <body>
-    <h1>
+    <h1 id="root">
       This is my React Project
     </h1>
   </body>
+  <script src="index.js"></script>
 </html>
